--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ Author URI: http://message205.com
 Template: enfold
 */
 
+/* Added a comment at the top of the stylesheet to check flow from local to remote git */
+
 /* =====COLOUR======
 	Off White 	#E3DFCB
 	Light Grey 	#958F83
